--- a/JawStat/src/pages/home/home.html
+++ b/JawStat/src/pages/home/home.html
@@ -7,7 +7,7 @@
       </button>
     </ion-buttons>
     <ion-buttons end>
-      <button ion-button icon-only onclick="logFunction()">
+      <button ion-button icon-only>
         <ion-icon name='ios-settings'></ion-icon>
       </button>
     </ion-buttons>
