--- a/JawStat/src/pages/login/login.html
+++ b/JawStat/src/pages/login/login.html
@@ -3,19 +3,28 @@
     <ion-title>
       Login
     </ion-title>
-    <ion-buttons start>
-      <button ion-button menuToggle icon-only>
-        <ion-icon name='menu'></ion-icon>
-      </button>
-    </ion-buttons>
-    <ion-buttons end>
-      <button ion-button icon-only>
-        <ion-icon name='ios-settings'></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+  <ion-list>
 
+    <ion-item>
+      <ion-label floating>Username</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="password"></ion-input>
+    </ion-item>
+
+  </ion-list>
+
+    <div padding>
+      <button ion-button color="primary" block>Login</button>
+    </div>
+    <div padding>
+      <button ion-button color="danger" block (click)="openPage(signinPage)">Sign In</button>
+    </div>
 </ion-content>
