--- a/angularJS/client/src/common/header.tpl.html
+++ b/angularJS/client/src/common/header.tpl.html
@@ -1,9 +1,13 @@
 <div class="pure-menu pure-menu-open pure-menu-horizontal">
-  <a class="pure-menu-heading" href="">angular-kickstart <span app-version></span></a>
+  <a class="pure-menu-heading" href="">JawStat</a>
   <ul>
-    <li ui-sref-active="pure-menu-selected"><a href ui-sref="root.home">{{ 'home' | uppercase }}</a>
+    <li ui-sref-active="pure-menu-selected"><a href ui-sref="root.home">{{ 'Accueil' | uppercase }}</a>
     </li>
-    <li ui-sref-active="pure-menu-selected"><a href ui-sref="root.getting-started">{{ 'getting started' | uppercase }}</a>
+    <li ui-sref-active="pure-menu-selected"><a href ui-sref="root.about-us">{{ 'Qui sommes-nous' | uppercase }}</a>
+    </li>
+    <li ui-sref-active="pure-menu-selected"><a href ui-sref="root.why">{{ 'Pourquoi ce site ?' | uppercase }}</a>
+    </li>
+    <li ui-sref-active="pure-menu-selected"><a href ui-sref="root.contact">{{ 'Contact' | uppercase }}</a>
     </li>
   </ul>
 </div>
