--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,1 +1,18 @@
-<div>This is the about view.</div>
+<header class="hero-unit" id="banner">
+  <div class="container">
+    <h1>Qui sommes nous?</h1>
+    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+  </div>
+</header>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Qui sommes nous?</h1>
+      <p>
+        Nous sommes des chirurgiens dentistes exerçant une activité omnipratique hospitalo-universitaire et libérale. Ce site est gratuit à but non lucratif.
+        Il a été réalisé par l’aide d’une bourse du Collège National d’Occlusodontologie en 2017.
+      </p>
+    </div>
+  </div>
+</div>
