--- a/client/app/contact/contact.html
+++ b/client/app/contact/contact.html
@@ -1,1 +1,28 @@
-<div>This is the contact view.</div>
+<header class="hero-unit" id="banner">
+  <div class="container">
+    <h1>Contact!</h1>
+    <p class="lead">Please contact us!</p>
+    <img src="assets/images/Jaw_stat_logo.png" alt="I'm Jaw" width=20%>
+  </div>
+</header>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Contact:</h1>
+    </div>
+  </div>
+
+  <form class="thing-form">
+    <p class="input-group">
+
+      <input type="text" class="form-control" placeholder="Nom" ng-model="$ctrl.newThing">
+
+      <input type="email" class="form-control" placeholder="test@mail.com" ng-model="$ctrl.newThing">
+
+      <input type="text" class="form-control" placeholder="Votre message..." ng-model="$ctrl.newThing">
+      
+      <button type="submit" class="btn btn-primary" ng-click="$ctrl.addThing()">Envoyer</button>
+    </p>
+  </form>
+</div>
