--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
   <script type="text/javascript" src="src/app/home/home.js"></script>
   <script type="text/javascript" src="src/app/contact/contact.js"></script>
   <script type="text/javascript" src="src/app/why/why.js"></script>
+  <script src="src/app/redigefc/redigefc.js" type="text/javascript"></script>
 
   <script type="text/javascript" src="src/common/directives/version.js"></script>
   <script type="text/javascript" src="src/common/interceptors/httpInterceptor.js"></script>
@@ -50,7 +51,7 @@
   <script type="text/javascript" src="src/common/footer.js"></script>
 
   <script type="text/javascript" src="tmp/templates.js"></script>
-
+  <script type="text/javascript" src="dist/ui-bootstrap-2.4.0.min.js"></script>
   <!-- GOOGLE MAPS -->
   <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script src="dist/ng-map.min.js"></script>`
